error.txt
node : D:\E-Com\scaffold_scre
ens.js:225
At line:1 char:1
+ node scaffold_screens.js 
2>&1 | Out-File -Encoding 
utf8 error.txt
+ 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (D:\E-Co  
  m\scaffold_screens.js:22   
 5:String) [], RemoteExce    
ption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
  writeEmptyComponent(\`scree
ns/\${name}.jsx\`, name);
                      ^

SyntaxError: Invalid or 
unexpected token
    at wrapSafe (node:interna
l/modules/cjs/loader:1734:18)
    at Module._compile (node:
internal/modules/cjs/loader:1
777:20)
    at Object..js (node:inter
nal/modules/cjs/loader:1934:1
0)
    at Module.load (node:inte
rnal/modules/cjs/loader:1524:
32)
    at Module._load (node:int
ernal/modules/cjs/loader:1326
:12)
    at 
TracingChannel.traceSync (nod
e:diagnostics_channel:328:14)
    at wrapModuleLoad (node:i
nternal/modules/cjs/loader:24
5:24)
    at 
Module.executeUserEntryPoint 
[as runMain] (node:internal/m
odules/run_main:154:5)
    at node:internal/main/run
_main_module:33:47

Node.js v25.5.0
